<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/registerPassR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/contrasenyaRep"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/contrasenyaRep"
                app:layout_constraintStart_toStartOf="@+id/registerPass"
                app:layout_constraintTop_toBottomOf="@+id/registerPass" />

            <Spinner
                android:id="@+id/provincia"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/registerTelefono"
                app:layout_constraintStart_toStartOf="@+id/registerTelefono"
                app:layout_constraintTop_toBottomOf="@+id/registerTelefono" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/usuario"
                app:layout_constraintStart_toStartOf="@+id/registerEmail"
                app:layout_constraintTop_toBottomOf="@+id/registerEmail" />

            <EditText
                android:id="@+id/registerUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/usuario"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/telefono"
                app:layout_constraintStart_toStartOf="@+id/registerUsuario"
                app:layout_constraintTop_toBottomOf="@+id/registerUsuario" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/correo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="@+id/registerEmail"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/contrasenya"
                app:layout_constraintStart_toStartOf="@+id/provincia"
                app:layout_constraintTop_toBottomOf="@+id/provincia" />

            <EditText
                android:id="@+id/registerPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/contrasenya"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_holevento"
                tools:srcCompat="@drawable/logo_holevento" />

            <EditText
                android:id="@+id/registerTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/telefono"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btnRegistrarse"
                app:layout_constraintEnd_toEndOf="@+id/registerPassR"
                app:layout_constraintHorizontal_bias="0.557"
                app:layout_constraintStart_toStartOf="@+id/registerPassR"
                app:layout_constraintTop_toBottomOf="@+id/registerPassR" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>